--- a/PokerMuck/PokerMuck.csproj
+++ b/PokerMuck/PokerMuck.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Classes\Hud\Hud.cs" />
     <Compile Include="Classes\Hud\HudWindowFactory.cs" />
     <Compile Include="Classes\Hud\HudWindowsList.cs" />
+    <Compile Include="Classes\Player\StatisticsValue.cs" />
     <Compile Include="Classes\Player\Player.cs" />
     <Compile Include="Classes\Player\PlayerFactory.cs" />
     <Compile Include="Classes\Player\PlayerStatistics.cs" />
