--- a/PokerMuck/PokerMuck.csproj
+++ b/PokerMuck/PokerMuck.csproj
@@ -103,10 +103,12 @@
     <Compile Include="Classes\Ranking\RankScanner.cs" />
     <Compile Include="Classes\Ranking\SharkScopeRankScanner.cs" />
     <Compile Include="Classes\Settings\HudUserSettings.cs" />
+    <Compile Include="Classes\Statistics\MultipleValueCounter.cs" />
     <Compile Include="Classes\Statistics\StatisticsData.cs" />
     <Compile Include="Classes\Statistics\StatisticsNumberData.cs" />
     <Compile Include="Classes\Statistics\StatisticsPercentageData.cs" />
     <Compile Include="Classes\Statistics\StatisticsUnknownData.cs" />
+    <Compile Include="Classes\Statistics\ValueCounter.cs" />
     <Compile Include="Classes\Table\HoldemTableStatistics.cs" />
     <Compile Include="Classes\Table\Table.cs" />
     <Compile Include="Classes\Table\TableStatistics.cs" />
