--- a/PokerMuck/PokerMuck.csproj
+++ b/PokerMuck/PokerMuck.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Classes\Board\Board.cs" />
     <Compile Include="Classes\Board\HoldemBoard.cs" />
     <Compile Include="Classes\Card\CardList.cs" />
+    <Compile Include="Classes\Database\PlayerDatabase.cs" />
     <Compile Include="Classes\Hud\Hud.cs" />
     <Compile Include="Classes\Hud\HudWindowFactory.cs" />
     <Compile Include="Classes\Hud\HudWindowsList.cs" />
