--- a/PokerMuck/PokerMuck.csproj
+++ b/PokerMuck/PokerMuck.csproj
@@ -93,6 +93,12 @@
     <Compile Include="Classes\Board\HoldemBoard.cs" />
     <Compile Include="Classes\Card\CardList.cs" />
     <Compile Include="Classes\Database\PlayerDatabase.cs" />
+    <Compile Include="Classes\Forms\FrmMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\Forms\FrmMain.designer.cs">
+      <DependentUpon>FrmMain.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\HandHistory\Monitor\INewFilesMonitorHandler.cs" />
     <Compile Include="Classes\HandHistory\Monitor\NewFilesMonitor.cs" />
     <Compile Include="Classes\Hud\Hud.cs" />
@@ -174,15 +180,12 @@
     </Compile>
     <Compile Include="Classes\WindowsListener\WindowsListener.cs" />
     <Compile Include="Classes\HandHistory\Parser\HHParser.cs" />
-    <Compile Include="FrmMain.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrmMain.Designer.cs">
-      <DependentUpon>FrmMain.cs</DependentUpon>
-    </Compile>
     <Compile Include="Classes\Player\HoldemPlayer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Classes\Forms\FrmMain.resx">
+      <DependentUpon>FrmMain.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Classes\UIComponents\ControlListContainer.resx">
       <DependentUpon>ControlListContainer.cs</DependentUpon>
     </EmbeddedResource>
@@ -200,9 +203,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Classes\UIComponents\StatisticsDisplay.resx">
       <DependentUpon>StatisticsDisplay.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FrmMain.resx">
-      <DependentUpon>FrmMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
