--- a/PokerMuck/PokerMuck.csproj
+++ b/PokerMuck/PokerMuck.csproj
@@ -93,6 +93,12 @@
     <Compile Include="Classes\Board\HoldemBoard.cs" />
     <Compile Include="Classes\Card\CardList.cs" />
     <Compile Include="Classes\Database\PlayerDatabase.cs" />
+    <Compile Include="Classes\Forms\FrmFirstExecutionWizard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\Forms\FrmFirstExecutionWizard.Designer.cs">
+      <DependentUpon>FrmFirstExecutionWizard.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\Forms\FrmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -183,6 +189,9 @@
     <Compile Include="Classes\Player\HoldemPlayer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Classes\Forms\FrmFirstExecutionWizard.resx">
+      <DependentUpon>FrmFirstExecutionWizard.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Classes\Forms\FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </EmbeddedResource>
