--- a/PokerMuck/PokerMuck.csproj
+++ b/PokerMuck/PokerMuck.csproj
@@ -153,6 +153,12 @@
     <Compile Include="Classes\UIComponents\ControlListContainer.Designer.cs">
       <DependentUpon>ControlListContainer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Classes\UIComponents\ExtendedStatisticsPanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Classes\UIComponents\ExtendedStatisticsPanel.Designer.cs">
+      <DependentUpon>ExtendedStatisticsPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\UIComponents\Hud\HoldemHudWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -176,6 +182,12 @@
     </Compile>
     <Compile Include="Classes\UIComponents\StatisticsDisplay.Designer.cs">
       <DependentUpon>StatisticsDisplay.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\UIComponents\StatisticItem.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Classes\UIComponents\StatisticItem.Designer.cs">
+      <DependentUpon>StatisticItem.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\WindowsListener\IDetectWindowsChanges.cs" />
     <Compile Include="Classes\Card\Card.cs" />
@@ -214,6 +226,9 @@
     <EmbeddedResource Include="Classes\UIComponents\EntityCardListPanel.resx">
       <DependentUpon>EntityCardListPanel.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Classes\UIComponents\ExtendedStatisticsPanel.resx">
+      <DependentUpon>ExtendedStatisticsPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Classes\UIComponents\Hud\HoldemHudWindow.resx">
       <DependentUpon>HoldemHudWindow.cs</DependentUpon>
     </EmbeddedResource>
@@ -225,6 +240,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Classes\UIComponents\StatisticsDisplay.resx">
       <DependentUpon>StatisticsDisplay.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Classes\UIComponents\StatisticItem.resx">
+      <DependentUpon>StatisticItem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
