--- a/PokerMuck/PokerMuck.csproj
+++ b/PokerMuck/PokerMuck.csproj
@@ -32,7 +32,7 @@
     <MinimumRequiredVersion>0.1.0.0</MinimumRequiredVersion>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>5</ApplicationRevision>
+    <ApplicationRevision>6</ApplicationRevision>
     <ApplicationVersion>0.1.4.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -139,6 +139,12 @@
     <Compile Include="Classes\Table\HoldemTableStatistics.cs" />
     <Compile Include="Classes\Table\Table.cs" />
     <Compile Include="Classes\Table\TableStatistics.cs" />
+    <Compile Include="Classes\UIComponents\HoldemCards\HoldemCardsButton.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Classes\UIComponents\HoldemCards\HoldemCardsButton.Designer.cs">
+      <DependentUpon>HoldemCardsButton.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\UIComponents\CardPictureBox.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -160,11 +166,23 @@
     <Compile Include="Classes\UIComponents\ControlListContainer.Designer.cs">
       <DependentUpon>ControlListContainer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Classes\UIComponents\Dialog\HoldemCardDisplayDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\UIComponents\Dialog\HoldemCardDisplayDialog.Designer.cs">
+      <DependentUpon>HoldemCardDisplayDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\UIComponents\ExtendedStatisticsPanel.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Classes\UIComponents\ExtendedStatisticsPanel.Designer.cs">
       <DependentUpon>ExtendedStatisticsPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\UIComponents\HoldemCards\HoldemCardsSelector.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Classes\UIComponents\HoldemCards\HoldemCardsSelector.Designer.cs">
+      <DependentUpon>HoldemCardsSelector.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\UIComponents\Hud\HoldemHudWindow.cs">
       <SubType>Form</SubType>
@@ -223,11 +241,17 @@
     <EmbeddedResource Include="Classes\Forms\FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Classes\UIComponents\HoldemCards\HoldemCardsButton.resx">
+      <DependentUpon>HoldemCardsButton.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Classes\UIComponents\ControlListContainer.resx">
       <DependentUpon>ControlListContainer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Classes\UIComponents\CardListPanel.resx">
       <DependentUpon>CardListPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Classes\UIComponents\Dialog\HoldemCardDisplayDialog.resx">
+      <DependentUpon>HoldemCardDisplayDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Classes\UIComponents\EntityCardListPanel.resx">
       <DependentUpon>EntityCardListPanel.cs</DependentUpon>
