--- a/PokerMuck/PokerMuck.csproj
+++ b/PokerMuck/PokerMuck.csproj
@@ -32,7 +32,7 @@
     <MinimumRequiredVersion>0.1.0.0</MinimumRequiredVersion>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>6</ApplicationRevision>
+    <ApplicationRevision>9</ApplicationRevision>
     <ApplicationVersion>0.1.4.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -97,6 +97,10 @@
     <Compile Include="Classes\Board\Board.cs" />
     <Compile Include="Classes\Board\HoldemBoard.cs" />
     <Compile Include="Classes\Card\CardList.cs" />
+    <Compile Include="Classes\Card\Recognition\CardRecognitionManager.cs" />
+    <Compile Include="Classes\Card\Recognition\CardRecognitionMap.cs" />
+    <Compile Include="Classes\Card\Recognition\ColorMaps\ColorMap.cs" />
+    <Compile Include="Classes\Card\Recognition\ColorMaps\HoldemColorMap.cs" />
     <Compile Include="Classes\Database\PlayerDatabase.cs" />
     <Compile Include="Classes\Forms\FrmFirstExecutionWizard.cs">
       <SubType>Form</SubType>
@@ -297,6 +301,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Cards.ico" />
+    <None Include="Resources\donkIco.png" />
     <None Include="Resources\QuestionIco.png" />
     <None Include="Resources\ForbiddenIco.png" />
     <None Include="Resources\AnvilIco.png" />
@@ -494,7 +499,10 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="CardMaps\Party Poker\" />
+    <Folder Include="CardMaps\Poker Stars\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
